Implement settings page in web app & external alias mailboxes
